nginx conf changed

--- a/epulatov.conf
+++ b/epulatov.conf
@@ -1,11 +1,11 @@
 server {
 	 listen 80;
-	 server_name epulatov ECSB003014C1.epam.com;
-	 return 301 https://ECSB003014C1.epam.com$request_uri;
+	 server_name epulatov;
+	 return 301 https://epulatov$request_uri;
 }
 
 server {
-	server_name epulatov ECSB003014C1.epam.com;
+	server_name epulatov;
 	listen 443 ssl;
         ssl_certificate /etc/ssl/certs/epulatov/nginx.crt;
         ssl_certificate_key /etc/ssl/private/epulatov/nginx.key;
